tests/snapshots/snapshots__app_snapshots__app_initial.snap
---
source: tests/snapshots.rs
expression: buffer_to_string(&buf)
---
┌ Search ──────────────────────┐┌ Heatmap ─────────────────────────────────────┐
│                              ││Select a variable to visualize                │
└──────────────────────────────┘│                                              │
┌ Variables ───────────────────┐│                                              │
│› ▶ /                         ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              │└──────────────────────────────────────────────┘
│                              │┌ Stats ───────────────────────────────────────┐
│                              ││Select a variable                             │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
└──────────────────────────────┘└──────────────────────────────────────────────┘
 test.nc  | ? help | q quit
