tests/snapshots/snapshots__app_snapshots__app_search_active.snap
---
source: tests/snapshots.rs
expression: buffer_to_string(&buf)
---
┌ Search ──────────────────────┐┌ Heatmap ─────────────────────────────────────┐
│ /temp (1 match)█             ││Select a variable to visualize                │
└──────────────────────────────┘│                                              │
┌ Results (1) ─────────────────┐│                                              │
│temperature  [lat=4, lon=6]   ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              │└──────────────────────────────────────────────┘
│                              │┌ Stats ───────────────────────────────────────┐
│                              ││Select a variable                             │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
└──────────────────────────────┘└──────────────────────────────────────────────┘
 test.nc  | ? help | q quit
