tests/snapshots/snapshots__app_snapshots__app_with_data.snap
---
source: tests/snapshots.rs
expression: buffer_to_string(&buf)
---
┌ Search ──────────────────────┐┌ temperature ─────────────────────────────────┐
│                              ││░░░░░░                                █23.0   │
└──────────────────────────────┘│░░░░░░                                █       │
┌ Variables ───────────────────┐│░░░░░░                                █       │
│› ▶ /                         ││▒▒▒▒▒▒                                █       │
│                              ││                                      █       │
│                              ││                                      █       │
│                              ││                                      █       │
│                              ││                                      █       │
│                              ││                                      █       │
│                              ││                                      █       │
│                              ││                                      █       │
│                              ││                                      █0.0    │
│                              ││0 … 5                                         │
│                              │└──────────────────────────────────────────────┘
│                              │┌ Stats: temperature ──────────────────────────┐
│                              ││Count   24                                    │
│                              ││Valid   24 (100.0%)                           │
│                              ││NaN     0                                     │
│                              ││Inf     0                                     │
│                              ││───────────────                               │
│                              ││Min     0.0000                                │
└──────────────────────────────┘└──────────────────────────────────────────────┘
 test.nc  | temperature  | temperature [lat=4, lon=6]  | ? help | q quit
